# wavedb2

./: .gitignore  .prob.md  CLAUDE.md  Cargo.toml  clippy.toml  deny.toml  flake.nix  readme.md  rust-toolchain.toml  rustfmt.toml  todo.md  todo2.md  todo_done.md
.github/workflows/: ci.yml
crates/wavedb/: Cargo.toml  README.md
crates/wavedb-bench/: Cargo.toml
crates/wavedb-bench/results/: README.md  history.jsonl  latest.md
crates/wavedb-build/: Cargo.toml
crates/wavedb-build/src/: lib.rs  scan.rs
crates/wavedb-core/: Cargo.toml  README.md
crates/wavedb-core/src/: collection.rs  collection_handle.rs  collection_write.rs  error.rs  expose.rs  fn_identity.rs  handle.rs  hooks.rs  id.rs  index.rs  lib.rs  local_id.rs  metadata.rs  overlay.rs  permission.rs  record.rs  record_unique.rs  registry.rs  store.rs  traits.rs  u48.rs  wire.rs
crates/wavedb-core/src/index/: key.rs  mem_store.rs  mod.rs  node.rs  node_key.rs  stream.rs  tree.rs  tree_delete.rs  tree_insert.rs
crates/wavedb-examples/: Cargo.toml
crates/wavedb-macros/: Cargo.toml  README.md
crates/wavedb-macros/src/: args.rs  exec_ops.rs  expose.rs  expose_parse.rs  generated.rs  lib.rs  secondaries.rs  server.rs  server_stream.rs  storage_statics.rs  struct_hash.rs  wavedb_attr.rs  wire_derive.rs
crates/wavedb-macros/tests/: wavedb_attr.rs  wire_derive.rs
crates/wavedb-macros/tests/ui/: err_no_struct_id.stderr  err_no_trailing_version.stderr  err_struct_id_too_big.stderr  err_version_overflow.stderr
crates/wavedb-monitor/: Cargo.toml
crates/wavedb-monitor-gui/: Cargo.toml  README.md
crates/wavedb-net/: Cargo.toml  README.md
crates/wavedb-net/src/: auth.rs  client.rs  error.rs  frame.rs  frames.rs  http.rs  lib.rs
crates/wavedb-platform/: Cargo.toml  README.md
crates/wavedb-platform/src/: error.rs  lib.rs  rand.rs  time.rs
crates/wavedb-platform/src/http/: mod.rs  native.rs  wasm.rs
crates/wavedb-quick-node/: Cargo.toml  README.md
crates/wavedb-quick-node/src/: dispatch.rs  error.rs  lib.rs  serve.rs
crates/wavedb-quick-node/tests/: node_http.rs
crates/wavedb-slow-node/: Cargo.toml  README.md
crates/wavedb-storage/: Cargo.toml  README.md
crates/wavedb-storage/src/: alloc.rs  block.rs  block_file.rs  bptree.rs  chain.rs  checkpoint.rs  commit.rs  dictionary.rs  directory.rs  directory_pages.rs  error.rs  journal.rs  lib.rs  page.rs  page_store.rs  read_through.rs  settle.rs  struct_storage.rs
crates/wavedb-storage/tests/: nonunique_collection.rs
crates/wavedb-test-cluster/: Cargo.toml
crates/wavedb-test-cluster/src/: lib.rs
crates/wavedb-wasm/: Cargo.toml  README.md
crates/wavedb-wasm/src/: lib.rs  probe.rs
crates/wavedb-wasm/tests/: track_size_of_wasm.jsonl
crates/wavedb-wire/: Cargo.toml  README.md
crates/wavedb-wire-derive/: Cargo.toml
crates/wavedb-wire-derive/src/: enums.rs  lib.rs
crates/wavedb-wire/src/: impls.rs  lib.rs
crates/wavedb/src/: auth.rs  client_handle.rs  collection.rs  db.rs  error.rs  lib.rs  reply.rs  server_db.rs  unique.rs
crates/wavedb/tests/: client_e2e.rs  fn_identity.rs  server_fn_e2e.rs
docs/: app_platform_roadmap.md  development_standards.md  example_auth.md  wire_format.md
examples/contact-book/: Cargo.toml
examples/contact-book/src/: lib.rs
examples/contact-book/tests/: e2e.rs
examples/schema-smoke/: Cargo.toml
examples/schema-smoke/src/: lib.rs
examples/todo-app/: Cargo.toml
examples/todo-app/client/: Cargo.toml
examples/todo-app/client/src/: main.rs
examples/todo-app/schema/: Cargo.toml  build.rs
examples/todo-app/schema/src/: lib.rs
examples/todo-app/schema/tests/: e2e.rs
examples/todo-app/server/: Cargo.toml
examples/todo-app/server/src/: main.rs
scripts/: check_file_length.sh  wasm_size.sh
