[workspace]
resolver = "2"
# Staged rebuild: `members` grows as each crate is implemented bottom-up. Crates
# still under construction (empty or bin-only targets) sit in `exclude` so the
# workspace resolves. Move a crate from `exclude` to `members` once it builds.
members = [
  "crates/wavedb-wire",
  "crates/wavedb-wire-derive",
  "crates/wavedb-core",
  "crates/wavedb-macros",
  "crates/wavedb-storage",
  "crates/wavedb-net",
  "crates/wavedb-quick-node",
  "crates/wavedb",
  "examples/contact-book",
  "examples/schema-smoke",
  "examples/todo-app/schema",
  "examples/todo-app/server",
  "examples/todo-app/client",
]
exclude = [
  "crates/wavedb-wasm",
  "crates/wavedb-bench",
  "crates/wavedb-test-cluster",
]

[workspace.package]
edition = "2024"
rust-version = "1.96"
license = "MIT OR Apache-2.0"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
trivially_copy_pass_by_ref = "allow"

[workspace.dependencies]
# Shared versions; sub-crates pick what they need.
# The standalone Wire codec (pure value ⇄ bytes, no STRUCT_HASH). `wavedb-core`
# re-exports it as `wavedb_core::wire`.
wavedb-wire = { path = "crates/wavedb-wire" }
# Its companion `#[derive(WaveWire)]` proc-macro, re-exported by `wavedb-wire`.
wavedb-wire-derive = { path = "crates/wavedb-wire-derive" }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
zstd = "0.13.3"
byteorder = "1.5.0"
# The one hash function everywhere: STRUCT_HASH (fixed seed, compile-time type
# identity) + runtime Id/page routing (per-DB random seed in data.bin page 0).
# SeaHash is portable across arch/endianness for a given seed. PINNED EXACTLY:
# STRUCT_HASH identity is load-bearing, so a version bump that changed the
# algorithm would invalidate every stored record's type hash — never loosen `=`.
seahash = "=4.1.0"
parking_lot = "0.12.5"
proptest = "1.11.0"
criterion = { version = "0.8.2", features = ["async_tokio"] }
trybuild = "1.0.116"
tempfile = "3.27.0"
crc32fast = "1.5.0"
# Phase 11 — network transport
tokio-tungstenite = { version = "0.29.0", features = ["connect"] }
axum = "0.8.9"
# Loopback HTTP only — no TLS needed, and `default-tls` fails on systems
# without a system CA bundle (NixOS, minimal containers).  Disable
# default features so `Client::builder()` doesn't try to load roots.
reqwest = { version = "0.13.3", default-features = false }
bytes = "1.11.1"
fastbloom = "0.17.0"
futures-util = "0.3.32"
web-sys = { version = "0.3.98", features = [
  "WebSocket",
  "MessageEvent",
  "BinaryType",
  "Event",
  "ReadableStream",
  "TextDecoder",
] }
clap = { version = "4.6.1", features = ["derive"] }
hmac = "0.12"
sha2 = "0.10"
ratatui = "0.29"
crossterm = "0.28"
sysinfo = "0.32"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["fmt"] }
proc-macro2 = "1.0.103"
quote = "1.0.41"
syn = { version = "2.0.117", features = ["full", "extra-traits"] }
wasm-bindgen = "0.2.121"
wasm-bindgen-futures = "0.4.71"
# default-features off: the `json` default drags serde + serde_json into
# the wasm binary; WaveDB speaks its own wire format.
gloo-net = { version = "0.7.0", default-features = false, features = [
  "http",
  "websocket",
] }
js-sys = "0.3.98"
futures = "0.3.32"
wasm-bindgen-test = "0.3.71"

[profile.release]
lto = "fat"
codegen-units = 1
debug = "line-tables-only"

# Size-optimised wasm artifact — used by `nix build .#wasm` and
# scripts/wasm_size.sh.  Differences vs release: optimise for size, no
# debug info (line tables bloat .wasm), strip symbols, abort on panic
# (drops the unwinding machinery the browser can't use anyway).
[profile.wasm-release]
inherits = "release"
opt-level = "z"
debug = false
strip = "symbols"
panic = "abort"

[profile.bench]
inherits = "release"
