[package]
name = "wavedb-build"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
# Parse the schema crate's `src/` and emit the generated registry module.
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
prettyplease = "0.2.37"

[dev-dependencies]
tempfile = { workspace = true }
