[package]
name = "wavedb-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
# The Wire codec, re-exported as `wavedb_core::wire`. Lives in its own crate so
# the serialization layer carries no STRUCT_HASH / engine coupling.
wavedb-wire.workspace = true
# `Stream` + combinators for the Store-generic index layer (BpTree search,
# IdStreamExt set algebra). Pure async, WASM-safe — no I/O.
futures = { workspace = true }

[features]
# Forwards to `wavedb-wire/validation`: the crc32-framed `to_wire_checked` /
# `from_wire_checked`, re-exported via `wavedb_core::wire`.
validation = ["wavedb-wire/validation"]
