[package]
name = "wavedb-macros"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
# STRUCT_HASH is computed here at macro-expansion time.
seahash = { workspace = true }

[dev-dependencies]
trybuild.workspace = true
wavedb-core = { path = "../wavedb-core" }
