[package]
name = "wavedb-monitor-gui"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[[bin]]
name = "wavedb-monitor-gui"
path = "src/main.rs"

[lib]
name = "wavedb_monitor_gui"
path = "src/lib.rs"

[dependencies]
wavedb-core = { path = "../wavedb-core" }
wavedb-net = { path = "../wavedb-net" }
wavedb-storage = { path = "../wavedb-storage" }
tokio.workspace = true
reqwest.workspace = true
clap.workspace = true
futures-util.workspace = true
bytes.workspace = true

# GUI stack — egui_shadcn workspace crates pulled in by folder path for now
# (sibling checkout; switch to git/registry once published).
egui_components = { path = "../../../egui_shadcn/egui_components" }
egui_charts = { path = "../../../egui_shadcn/egui_charts/crates/egui_charts" }
egui = "0.34"
eframe = { version = "0.34", default-features = false, features = [
  "default_fonts",
  "glow",
  "x11",
  "wayland",
] }

[dev-dependencies]
# In-process Slow-Node for poll-worker integration tests.
wavedb-slow-node = { path = "../wavedb-slow-node" }
axum.workspace = true
