[package]
name = "wavedb-net"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = ["native"]
# Native (tokio-backed) build — HTTP/WebSocket transports and notification bus.
native = [
  "dep:tokio",
  "dep:tokio-tungstenite",
  "dep:axum",
  "dep:reqwest",
  "dep:futures-util",
]

[dependencies]
wavedb-core = { path = "../wavedb-core" }
wavedb-macros = { path = "../wavedb-macros" }
thiserror.workspace = true
parking_lot.workspace = true
bytes.workspace = true
fastbloom.workspace = true
hmac.workspace = true
sha2.workspace = true
# Native-only transports
tokio = { workspace = true, optional = true }
tokio-tungstenite = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "network"
harness = false
