[package]
name = "wavedb-net"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
# Frames wrap the core command/reply surface (Command, Reply, Id, U48).
wavedb-core = { path = "../wavedb-core" }
# Direct dep (not just via core): `#[derive(WaveWire)]` expands to absolute
# `::wavedb_wire::` paths, so any crate deriving it must name the crate itself.
wavedb-wire.workspace = true
thiserror.workspace = true

# The HTTP POST tunnel is a hand-rolled HTTP/1.1 exchange over a TcpStream:
# WaveDB uses no HTTP semantics (no headers-as-API, no status codes, no
# routing), so a full HTTP stack would be dead weight. Native only — the
# browser build (M5) speaks `fetch` instead.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["net", "io-util", "time"] }
# `call_stream` surfaces a walk's item frames as a `Stream`.
futures.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "net", "io-util"] }
