[package]
name = "wavedb-platform"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
thiserror.workspace = true

# Native: the client half of the dumb tunnel is a hand-rolled HTTP/1.1 POST
# over a fresh TcpStream (no HTTP stack — WaveDB uses no HTTP semantics).
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["net", "io-util"] }

# Browser: the same seams over the web APIs — `Date.now()`, `fetch` +
# `Request` with a streamed response body, `crypto.getRandomValues`.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
web-sys = { workspace = true, features = [
  "Crypto",
  "Headers",
  "ReadableStream",
  "ReadableStreamDefaultReader",
  "Request",
  "RequestInit",
  "Response",
  "Window",
] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "net", "io-util"] }
