[package]
name = "wavedb-quick-node"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
name = "wavedb_quick_node"
path = "src/lib.rs"

[dependencies]
# The node owns the storage engine and dispatches through the core exposure
# surface; net supplies the request/response envelopes and HTTP framing.
wavedb-core = { path = "../wavedb-core" }
wavedb-storage = { path = "../wavedb-storage" }
wavedb-net = { path = "../wavedb-net" }
# Entropy for the default per-boot signing secret.
wavedb-platform.workspace = true
tokio = { workspace = true, features = ["net", "io-util", "rt", "macros", "time"] }
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "net", "io-util", "sync", "time"] }
futures.workspace = true
tempfile.workspace = true
wavedb-net = { path = "../wavedb-net" }
# Integration tests drive the node with real `#[wavedb]` structs + a REGISTRY.
schema-smoke = { path = "../../examples/schema-smoke" }
