[package]
name = "wavedb-storage"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
wavedb-core = { path = "../wavedb-core" }
wavedb-macros = { path = "../wavedb-macros" }
byteorder.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
zstd.workspace = true
crc32fast.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
