[package]
name = "wavedb-storage"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
wavedb-core = { path = "../wavedb-core" }
# The engine is single-writer per node; one non-async mutex guards its state.
parking_lot.workspace = true
thiserror.workspace = true
# Page + journal-frame integrity checksums.
crc32fast.workspace = true
# Runtime Id/page-routing hash (per-DB random seed).
seahash.workspace = true
# Streams for the search walk over the Store seam.
futures.workspace = true

[dev-dependencies]
tempfile.workspace = true
