[package]
name = "wavedb-storage"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
# `validation` turns on the crc32-framed checked wire encoding the journal and
# superblock persist with.
wavedb-core = { path = "../wavedb-core", features = ["validation"] }
# Direct dep (not just via core): `#[derive(WaveWire)]` expands to absolute
# `::wavedb_wire::` paths, so any crate deriving it must name the crate itself.
wavedb-wire.workspace = true
# The engine is single-writer per node; one non-async mutex guards its state.
parking_lot.workspace = true
thiserror.workspace = true
# Page + journal-frame integrity checksums.
crc32fast.workspace = true
# Runtime Id/page-routing hash (per-DB random seed).
seahash.workspace = true
# Streams for the search walk over the Store seam.
futures.workspace = true

[dev-dependencies]
tempfile.workspace = true
