[package]
name = "wavedb-test-cluster"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
wavedb = { path = "../wavedb" }
wavedb-core = { path = "../wavedb-core" }
wavedb-net = { path = "../wavedb-net" }
wavedb-storage = { path = "../wavedb-storage" }
wavedb-quick-node = { path = "../wavedb-quick-node" }
tokio.workspace = true
axum = { workspace = true, features = ["ws"] }
bytes.workspace = true
reqwest = { workspace = true }
tempfile.workspace = true
parking_lot.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
