[package]
name = "wavedb-wasm"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wavedb = { path = "../wavedb", default-features = false, features = ["wasm"] }

# WASM-only dependencies — compiled only when targeting wasm32-unknown-unknown.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
gloo-net = { workspace = true }
js-sys = { workspace = true }

futures = { workspace = true }
# Direct dep so the `::wavedb_core::` paths emitted by #[wave_db] resolve
# in this crate (the example schema lives here).
wavedb-core = { path = "../wavedb-core" }
wavedb-net = { path = "../wavedb-net", default-features = false }
# IndexedDB features on top of the workspace web-sys set — browser-side
# persistence (pages + bookkeeping) lives in IndexedDB, not localStorage.
web-sys = { workspace = true, features = [
  "DomException",
  "DomStringList",
  "IdbDatabase",
  "IdbFactory",
  "IdbKeyRange",
  "IdbObjectStore",
  "IdbOpenDbRequest",
  "IdbRequest",
  "IdbTransaction",
  "IdbTransactionMode",
  "Window",
] }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }
