[package]
name = "wavedb-wasm"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Anchors the whole client stack (`Db`, `NetClient`, the platform `fetch`
# tunnel) into the wasm artifact — what the size tracker measures.
wavedb = { path = "../wavedb" }

# WASM-only dependencies — compiled only when targeting wasm32-unknown-unknown.
# The IndexedDB `Store` (remaining M5 work) will add its web-sys Idb*
# features here when it lands.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
# The probe drives the transport below the typed surface (raw frames).
wavedb-core = { path = "../wavedb-core" }
wavedb-net = { path = "../wavedb-net" }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }
