[package]
name = "wavedb"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = ["native"]
# Native (tokio-backed) build — HTTP/WebSocket transports, file storage.
native = ["dep:tokio", "dep:wavedb-storage", "wavedb-net/native"]
# WASM build — gloo-net + wasm-bindgen-futures (Phase 15).
wasm = []

[dependencies]
wavedb-core = { path = "../wavedb-core" }
wavedb-macros = { path = "../wavedb-macros" }
wavedb-storage = { path = "../wavedb-storage", optional = true }
# wavedb-net is always a dependency (provides request/response types for the
# erased transport closures).  The `native` feature just adds tokio on top.
wavedb-net = { path = "../wavedb-net", default-features = false }
parking_lot.workspace = true
tokio = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
tempfile.workspace = true
