[package]
name = "wavedb"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
# The client re-exports core types + the derive macros (so downstream schema
# crates use one dependency, `wavedb`), and talks to a node over `wavedb-net`.
wavedb-core = { path = "../wavedb-core" }
wavedb-macros = { path = "../wavedb-macros" }
wavedb-net = { path = "../wavedb-net" }
thiserror.workspace = true
# Stream/StreamExt re-exported through the prelude for collection iterators.
futures.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "net", "io-util", "sync", "time"] }
tempfile.workspace = true
futures.workspace = true
# End-to-end tests drive a real node with a real schema crate + REGISTRY.
wavedb-quick-node = { path = "../wavedb-quick-node" }
schema-smoke = { path = "../../examples/schema-smoke" }
# The #[server]/#[wavedb]/expose_server! expansions in the server-fn E2E test
# emit `::wavedb_storage::` paths (the per-type storage slots + registry).
wavedb-storage = { path = "../wavedb-storage" }
