[package]
name = "contact-book"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
wavedb = { path = "../../crates/wavedb" }
# The derive-emitted code names ::wavedb_core:: paths directly.
wavedb-core = { path = "../../crates/wavedb-core" }
# Stream combinators for the index-backed `contacts_in` read.
futures.workspace = true

# `#[wavedb]` emits each type's native storage slot (`StructStorage`
# statics), so on non-wasm targets a schema crate links the engine crate
# defining it.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wavedb-storage = { path = "../../crates/wavedb-storage" }

[dev-dependencies]
wavedb-quick-node = { path = "../../crates/wavedb-quick-node" }
tokio.workspace = true
tempfile.workspace = true
futures.workspace = true
