[package]
name = "schema-smoke"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
wavedb-core = { path = "../../crates/wavedb-core" }
wavedb-macros = { path = "../../crates/wavedb-macros" }

# `#[wavedb]` emits each type's native storage slot (`StructStorage` statics),
# so on non-wasm targets a schema crate links the engine crate defining it.
# The wasm expansion omits the slots — no storage dep there.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wavedb-storage = { path = "../../crates/wavedb-storage" }

[dev-dependencies]
# block_on + stream combinators for the collection-flow smoke test.
futures.workspace = true
