[workspace]
resolver = "2"
members = ["schema", "server", "client"]

[workspace.package]
edition = "2024"
rust-version = "1.96"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
todo-app-schema = { path = "schema" }
wavedb = { path = "../../crates/wavedb" }
wavedb-core = { path = "../../crates/wavedb-core" }
wavedb-quick-node = { path = "../../crates/wavedb-quick-node" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
futures = "0.3"
async-stream = "0.3"
sha2 = "0.10"
