[package]
name    = "todo-app-schema"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[build-dependencies]
wavedb-build.workspace = true

[dependencies]
wavedb.workspace       = true
wavedb-core.workspace  = true
futures.workspace      = true
async-stream.workspace = true
sha2.workspace         = true
