[package]
name = "todo-app-schema"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
# The one dependency an app schema names: re-exports the derives, the
# expose_*! declaration macros, the prelude, and the Db/ServerDb handles.
wavedb = { path = "../../../crates/wavedb" }
# The derive-emitted code names ::wavedb_core:: paths directly.
wavedb-core = { path = "../../../crates/wavedb-core" }
# Placeholder credential hashing (real Argon2 lands with M8 auth).
sha2.workspace = true
# Stream combinators for the stream-returning `all_todos`.
futures.workspace = true

# `#[wavedb]` emits each type's native storage slot (`StructStorage`
# statics), so on non-wasm targets a schema crate links the engine crate
# defining it. The wasm expansion omits the slots — no storage dep there.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wavedb-storage = { path = "../../../crates/wavedb-storage" }

[dev-dependencies]
# The end-to-end proof spins a real node and drives the six functions.
wavedb-quick-node = { path = "../../../crates/wavedb-quick-node" }
tokio.workspace = true
tempfile.workspace = true
futures.workspace = true
