[package]
name = "todo-app-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
todo-app-schema = { path = "../schema" }
wavedb-quick-node = { path = "../../../crates/wavedb-quick-node" }
tokio.workspace = true
# Binary-level error reporting (apps aren't layers; anyhow is fine here).
anyhow = "1"
